--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.300.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16"
